--- a/about_us.html
+++ b/about_us.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
 
     <title>
-        Home || Novum Bewindvoering
+        About Us || Novum Bewindvoering
     </title>
 
 </head>
@@ -28,13 +28,14 @@
                 <div class="topnav">
                     <a href="contact.html">Contact</a>
                     <a href="services.html">Service</a>
-                    <a href="about_us.html">About Us</a>
-                    <a class="active" href="index.html">Home</a>
+                    <a class="active" href="about_us.html">About Us</a>
+                    <a href="index.html">Home</a>
 
                 </div>
             </div>
         </div>
     </div>
+    <h1>About Us</h1>
 
 
     <footer>
