--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
 
     <title>
-        Home || Novum Bewindvoering
+        Contact || Novum Bewindvoering
     </title>
 
 </head>
@@ -26,15 +26,16 @@
 
             <div class="column">
                 <div class="topnav">
-                    <a href="contact.html">Contact</a>
+                    <a class="active" href="contact.html">Contact</a>
                     <a href="services.html">Service</a>
                     <a href="about_us.html">About Us</a>
-                    <a class="active" href="index.html">Home</a>
+                    <a href="index.html">Home</a>
 
                 </div>
             </div>
         </div>
     </div>
+    <h1>Contact Us</h1>
 
 
     <footer>
