--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             <div class="column">
                 <div class="topnav">
                     <a class="active" href="contact.html">Contact</a>
-                    <a href="services.html">Service</a>
+                    <a href="services.html">Services</a>
                     <a href="about_us.html">About Us</a>
                     <a href="index.html">Home</a>
 
@@ -36,6 +36,25 @@
         </div>
     </div>
     <h1>Contact Us</h1>
+    <div class="containerForm">
+        <form action="send_info.php" method="POST">
+
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="firstname" placeholder="Your name...">
+
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="lastname" placeholder="Your last name...">
+
+            <label for="email">E-mail address</label>
+            <input type="text" id="email" name="email" placeholder="Your email address...">
+
+            <label for="subject">Subject</label>
+            <textarea id="subject" name="subject" placeholder="Write something..." style="height:7vw; font-family: 'PT Sans';"></textarea>
+
+            <input type="submit" value="Submit">
+
+        </form>
+    </div>
 
 
     <footer>
