--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="column">
                 <div class="topnav">
                     <a href="contact.html">Contact</a>
-                    <a href="services.html">Service</a>
+                    <a href="services.html">Services</a>
                     <a href="about_us.html">About Us</a>
                     <a class="active" href="index.html">Home</a>
 
