--- a/services.html
+++ b/services.html
@@ -27,7 +27,7 @@
             <div class="column">
                 <div class="topnav">
                     <a href="contact.html">Contact</a>
-                    <a class="active" href="services.html">Service</a>
+                    <a class="active" href="services.html">Services</a>
                     <a href="about_us.html">About Us</a>
                     <a href="index.html">Home</a>
 
@@ -35,7 +35,7 @@
             </div>
         </div>
     </div>
-    <h1>Services</h1>
+    <h1>Our Services</h1>
 
 
     <footer>
