almost design ready

--- a/about_us.html
+++ b/about_us.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
 
     <title>
-        About Us || Novum Bewindvoering
+        Over ons || Novum Bewindvoering
     </title>
 
 </head>
@@ -20,28 +20,41 @@
         <div class="row">
             <div class="column">
                 <header>
-                    <b>Novum Bewindvoering</b>
+                    <img src="img/novum-full-title-logo.png" alt="logo novum bewindvoering" align="left">
+                    <!-- <b>Novum<br>Bewindvoering</b> -->
                 </header>
             </div>
 
             <div class="column">
                 <div class="topnav">
                     <a href="contact.html">Contact</a>
-                    <a href="services.html">Services</a>
-                    <a class="active" href="about_us.html">About Us</a>
+                    <a href="services.html">Diensten</a>
+                    <a class="active" href="about_us.html">Over ons</a>
                     <a href="index.html">Home</a>
 
                 </div>
             </div>
         </div>
     </div>
-    <h1>About Us</h1>
+    <h1>Over ons</h1>
+    <div class="contactInfo">
+        <div class="rowContact">
+            <div class="columnContact">
+                Tel:
+            </div>
+            <div class="columnContact">
+                E-mail:
+            </div>
+            <div class="columnContact">
+                <a href="https://mijn.onview.nl/" class="onviewLink">Inloggen op Mijn OnView</a>
+            </div>
+        </div>
+    </div>
 
 
     <footer>
         <b>&copy; 2019 - NOVUM BEWINDVOERING</b>
-        </section>
-        <!--body container ended-->
+    </footer>
 </body>
 
 </html>
