--- a/index.html
+++ b/index.html
@@ -20,18 +20,50 @@
         <div class="row">
             <div class="column">
                 <header>
-                    <b>Novum Bewindvoering</b>
+                    <img src="img/novum-full-title-logo.png" alt="logo novum bewindvoering" align="left">
+                    <!-- <b>Novum<br>Bewindvoering</b> -->
                 </header>
             </div>
 
             <div class="column">
                 <div class="topnav">
                     <a href="contact.html">Contact</a>
-                    <a href="services.html">Services</a>
-                    <a href="about_us.html">About Us</a>
+                    <a href="services.html">Diensten</a>
+                    <a href="about_us.html">Over ons</a>
                     <a class="active" href="index.html">Home</a>
 
                 </div>
+
+            </div>
+        </div>
+    </div>
+    <h1>Bewindvoering voor uw nieuwe begin</h1>
+
+    <div class="rowContent">
+        <div class="columnContent">
+            <img class="moneyBGimg" src="img/bg-money2.jpg" alt="Photo by Eric Muhr on Unsplash" align="center">
+        </div>
+        <div class="columnContent">
+            <p class="homeContent">
+                Beschermingsbewind is een maatregel voor personen die door lichamelijke, geestelijke of persoonlijke omstandigheden, tijdelijk of langdurig niet in staat zijn om hun financiële belangen te kunnen behartigen. De bewindvoerder neemt deze taak over.
+                <br><br> Bij een beschermingsbewind wordt een persoon zijn vermogen en/of zijn bezittingen onder bewind gesteld en mag deze niet meer beslissen over deze zaken, maar de bewindvoerder. Deze heeft als verantwoordelijkheid om het vermogen
+                en bezittingen zo goed mogelijk te beheren. Verderop treft u een omschrijving van de werkzaamheden.
+                <br><br> Beschermingsbewind dient niet te worden verward met de WSNP, dit is een feitelijk andere maatregel. Beschermingsbewind is bedoeld om de financiële situatie te stabiliseren en het voorkomen van nieuwe schulden. Wanneer er sprake
+                is van (problematische) schulden zal uw bewindvoerder binnen uw budget de mogelijkheden bekijken voor betalingsregelingen of anders een saneringstraject ingezet dient te worden.
+
+            </p>
+        </div>
+    </div>
+    <div class="contactInfo">
+        <div class="rowContact">
+            <div class="columnContact">
+                Tel:
+            </div>
+            <div class="columnContact">
+                E-mail:
+            </div>
+            <div class="columnContact">
+                <a href="https://mijn.onview.nl/" class="onviewLink">Inloggen op Mijn OnView</a>
             </div>
         </div>
     </div>
@@ -39,8 +71,7 @@
 
     <footer>
         <b>&copy; 2019 - NOVUM BEWINDVOERING</b>
-        </section>
-        <!--body container ended-->
+    </footer>
 </body>
 
 </html>
