--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
 
     <title>
-        Services || Novum Bewindvoering
+        Diensten || Novum Bewindvoering
     </title>
 
 </head>
@@ -20,28 +20,74 @@
         <div class="row">
             <div class="column">
                 <header>
-                    <b>Novum Bewindvoering</b>
+                    <img src="img/novum-full-title-logo.png" alt="logo novum bewindvoering" align="left">
+                    <!-- <b>Novum<br>Bewindvoering</b> -->
                 </header>
             </div>
 
             <div class="column">
                 <div class="topnav">
                     <a href="contact.html">Contact</a>
-                    <a class="active" href="services.html">Services</a>
-                    <a href="about_us.html">About Us</a>
+                    <a class="active" href="services.html">Diensten</a>
+                    <a href="about_us.html">Over ons</a>
                     <a href="index.html">Home</a>
 
                 </div>
             </div>
         </div>
     </div>
-    <h1>Our Services</h1>
+    <h1>Diensten</h1>
+    <div class="servicesList">
+        <a href="#Bewindvoering">Bewindvoering</a>
+        <a href="#Budgetbeheer">Budgetbeheer</a>
+        <a href="#Coaching">Coaching</a>
+        <a href="#Advies">Advies</a>
+    </div>
+
+    <div class="servicesContent">
+        <p id="Bewindvoering">
+            <b>Bewindvoering</b><br> Beschermingsbewind is een maatregel voor personen die door lichamelijke, geestelijke of persoonlijke omstandigheden, tijdelijk of langdurig niet in staat zijn om hun financiële belangen te kunnen behartigen. De bewindvoerder
+            neemt deze taak over.
+        </p>
+        <p id="Budgetbeheer">
+            <b>Budgetbeheer</b><br> Budgetbeheer houdt in dat de budgetbeheerder uw inkomen beheert en alle vaste lasten maandelijks betaalt. Desgewenst kunnen er ook inkomensondersteunende middelen aangevraagd worden.
+        </p>
+        <p id="Coaching">
+            <b>Coaching</b><br> Goed omgaan met financiën is binnen onze samenleving voor velen een hele opgave. Een belangrijke oorzaak hierin is dat bij een groot deel van de Nederlandse huishoudens een groot deel van de koopkracht is gedaald, ondanks
+            dat cijfers dit soms tegen spreken. Steeds meer mensen moeten rondkomen met minder. Daarnaast wordt er een steeds groter beroep gedaan op de zelfredzaamheid van mensen in een steeds complexere samenleving.
+        </p>
+        <p id="Advies">
+            <b>Advies</b><br> Wij staan voor u klaar voor diverse financiële vraagstukken, u kunt bij ons terecht voor :
+
+            <li> Op orde brengen financiële administratie</li>
+            <li>Het geven van budgetadviezen</li>
+            <li>Het aanvragen van toeslagen en kindgebonden budget</li>
+            <li>Het aanvragen van bijzondere bijstand</li>
+            <li>Het verzorgen van aanvragen van kwijtscheldingen voor lokale heffingen en belastingen</li>
+            <li>Verzorging van belastingaangifte (box 1)</li>
+            <li>Juridisch advies en begeleiding bij inkomstenbeslag, bankbeslag, beslag op goederen, aangekondigde ontruiming van woning of gedwongen verkoop</li>
+        </p>
+        <br><br>
+    </div>
+
+    <div class="contactInfo">
+        <div class="rowContact">
+            <div class="columnContact">
+                Tel:
+            </div>
+            <div class="columnContact">
+                E-mail:
+            </div>
+            <div class="columnContact">
+                <a href="https://mijn.onview.nl/" class="onviewLink">Inloggen op Mijn OnView</a>
+            </div>
+        </div>
+    </div>
 
 
     <footer>
         <b>&copy; 2019 - NOVUM BEWINDVOERING</b>
-        </section>
-        <!--body container ended-->
+    </footer>
 </body>
 
 </html>
