--- a/contact.html
+++ b/contact.html
@@ -20,47 +20,60 @@
         <div class="row">
             <div class="column">
                 <header>
-                    <b>Novum Bewindvoering</b>
+                    <img src="img/novum-full-title-logo.png" alt="logo novum bewindvoering" align="left">
+                    <!-- <b>Novum<br>Bewindvoering</b> -->
                 </header>
             </div>
 
             <div class="column">
                 <div class="topnav">
                     <a class="active" href="contact.html">Contact</a>
-                    <a href="services.html">Services</a>
-                    <a href="about_us.html">About Us</a>
+                    <a href="services.html">Diensten</a>
+                    <a href="about_us.html">Over ons</a>
                     <a href="index.html">Home</a>
 
                 </div>
             </div>
         </div>
     </div>
-    <h1>Contact Us</h1>
+    <h1>Contactformulier</h1>
     <div class="containerForm">
         <form action="send_info.php" method="POST">
 
-            <label for="fname">First Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name...">
+            <label for="fname">Voornaam</label>
+            <input type="text" id="fname" name="firstname" placeholder="Jouw Voornaam..." required autofocus>
 
-            <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your last name...">
+            <label for="lname">Achternaam</label>
+            <input type="text" id="lname" name="lastname" placeholder="Jouw Achternaam...">
 
-            <label for="email">E-mail address</label>
-            <input type="text" id="email" name="email" placeholder="Your email address...">
+            <label for="email">E-mail </label>
+            <input type="text" id="email" name="email" placeholder="Jouw email address..." required>
 
-            <label for="subject">Subject</label>
-            <textarea id="subject" name="subject" placeholder="Write something..." style="height:7vw; font-family: 'PT Sans';"></textarea>
+            <label for="subject">Onderwerp</label>
+            <textarea id="subject" name="subject" placeholder="Schrijf iets..." required style="height:7vw; font-family: 'PT Sans';"></textarea>
 
             <input type="submit" value="Submit">
 
         </form>
     </div>
+    <div class="contactInfo">
+        <div class="rowContact">
+            <div class="columnContact">
+                Tel:
+            </div>
+            <div class="columnContact">
+                E-mail:
+            </div>
+            <div class="columnContact">
+                <a href="https://mijn.onview.nl/" class="onviewLink">Inloggen op Mijn OnView</a>
+            </div>
+        </div>
+    </div>
 
 
     <footer>
         <b>&copy; 2019 - NOVUM BEWINDVOERING</b>
-        </section>
-        <!--body container ended-->
+    </footer>
 </body>
 
 </html>
