--- a/about_us.html
+++ b/about_us.html
@@ -6,8 +6,10 @@
     <!-- <meta name="keywords" content="HTML,CSS,XML,Entertainment,Games,Mobile games,board games,Console Gmaes" />
     <meta name="description" content="entertainment,index/home page" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/logo.png" sizes="16x16 32x32" type="image/png">
+    <link rel="stylesheet" type="text/css" href="C.S.S/stylesheet.css">
+
 
     <title>
         Over ons || Novum Bewindvoering
@@ -20,14 +22,14 @@
         <div class="row">
             <div class="column">
                 <header>
-                    <img src="img/novum-full-title-logo.png" alt="logo novum bewindvoering" align="left">
+                    <img src="img/novum-full-title-logo3.png" alt="logo novum bewindvoering" align="left">
                     <!-- <b>Novum<br>Bewindvoering</b> -->
                 </header>
             </div>
 
             <div class="column">
                 <div class="topnav">
-                    <a href="contact.html">Contact</a>
+                    <a href="contact.php">Contact</a>
                     <a href="services.html">Diensten</a>
                     <a class="active" href="about_us.html">Over ons</a>
                     <a href="index.html">Home</a>
@@ -40,18 +42,18 @@
     <div class="contactInfo">
         <div class="rowContact">
             <div class="columnContact">
-                Tel:
+                <img class="footerIconPhone" src="img/phone-icon.jpg"> : 06-81902648
             </div>
             <div class="columnContact">
-                E-mail:
+                <img class="footerIconEmail" src="img/email-icon.png"> : info@novumbewindvoering.nl
             </div>
             <div class="columnContact">
+
+                <img class="footerIconOnview" src="img/logo-onview.png">
                 <a href="https://mijn.onview.nl/" class="onviewLink">Inloggen op Mijn OnView</a>
             </div>
         </div>
     </div>
-
-
     <footer>
         <b>&copy; 2019 - NOVUM BEWINDVOERING</b>
     </footer>
