--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <!-- <meta name="keywords" content="HTML,CSS,XML,Entertainment,Games,Mobile games,board games,Console Gmaes" />
     <meta name="description" content="entertainment,index/home page" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/logo.png" sizes="16x16 32x32" type="image/png">
+    <link rel="stylesheet" type="text/css" href="C.S.S/stylesheet.css">
+
 
     <title>
         Home || Novum Bewindvoering
@@ -20,14 +22,14 @@
         <div class="row">
             <div class="column">
                 <header>
-                    <img src="img/novum-full-title-logo.png" alt="logo novum bewindvoering" align="left">
+                    <img src="img/novum-full-title-logo3.png" alt="logo novum bewindvoering" align="left">
                     <!-- <b>Novum<br>Bewindvoering</b> -->
                 </header>
             </div>
 
             <div class="column">
                 <div class="topnav">
-                    <a href="contact.html">Contact</a>
+                    <a href="contact.php">Contact</a>
                     <a href="services.html">Diensten</a>
                     <a href="about_us.html">Over ons</a>
                     <a class="active" href="index.html">Home</a>
@@ -37,13 +39,14 @@
             </div>
         </div>
     </div>
-    <h1>Bewindvoering voor uw nieuwe begin</h1>
-
+    <!-- <h1 class="indexH1">BEWINDVOERING</h1> -->
+    <!-- <h1>Start met een nieuw begin</h1> -->
     <div class="rowContent">
         <div class="columnContent">
             <img class="moneyBGimg" src="img/bg-money2.jpg" alt="Photo by Eric Muhr on Unsplash" align="center">
         </div>
         <div class="columnContent">
+            <h1 class="indexH1">BEWINDVOERING</h1>
             <p class="homeContent">
                 Beschermingsbewind is een maatregel voor personen die door lichamelijke, geestelijke of persoonlijke omstandigheden, tijdelijk of langdurig niet in staat zijn om hun financiële belangen te kunnen behartigen. De bewindvoerder neemt deze taak over.
                 <br><br> Bij een beschermingsbewind wordt een persoon zijn vermogen en/of zijn bezittingen onder bewind gesteld en mag deze niet meer beslissen over deze zaken, maar de bewindvoerder. Deze heeft als verantwoordelijkheid om het vermogen
@@ -57,12 +60,14 @@
     <div class="contactInfo">
         <div class="rowContact">
             <div class="columnContact">
-                Tel:
+                <img class="footerIconPhone" src="img/phone-icon.jpg"> : 06-81902648
             </div>
             <div class="columnContact">
-                E-mail:
+                <img class="footerIconEmail" src="img/email-icon.png"> : info@novumbewindvoering.nl
             </div>
             <div class="columnContact">
+
+                <img class="footerIconOnview" src="img/logo-onview.png">
                 <a href="https://mijn.onview.nl/" class="onviewLink">Inloggen op Mijn OnView</a>
             </div>
         </div>
